new header font

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,7 +9,7 @@ body {
 	width: 700px;
 }
 h1, h2, h3, h4, h5 {
-	font-family: 'Bangers', sans-serif;
+	font-family: 'Josefin Slab', sans-serif;
 	color: #45A4FF;
 }
 h1 {
