--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,15 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   
+  <link href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:bold" rel="stylesheet" />
+  <link href="styles/base.css" rel="stylesheet" />
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 </head>
 <body>
+  
+    <h1>{{ page.title }}</h1>
+    
     {{ content }}
 </body>
 </html>
