--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
 </head>
 <body>
-  
-    <h1>{{ page.title }}</h1>
+  <div id="container">
+      <h1>{{ page.title }}</h1>
     
-    {{ content }}
+      {{ content }}
+    
+      <a href="http://github.com/grifo/grifo-jquery-plugins"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  </div>
 </body>
 </html>
-
